fix figure overflow bug

--- a/src/other.less
+++ b/src/other.less
@@ -11,6 +11,7 @@
     padding-bottom: 100%;
     position: relative;
     background-color: @light_gray;
+    overflow: hidden;
     >img {
         width: 100%;
         left: 0;
